--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/ganasoft
 spring.datasource.username=root
 spring.datasource.password=Pfdk_09.26
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto = update
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
